Implementação da documentação de Address (post - get)
