# src/shared/routes/address.routes.ts
@@ -1,14 +1,14 @@
 import { Router } from "express";
 import { CreateAddressController } from "../../modules/address/useCases/createAddress/CreateAddressController";
-import { ListAdressesController } from "../../modules/address/useCases/listAdresses/ListAdressesController";
+import { ListAddressesController } from "../../modules/address/useCases/listAddresses/ListAddressesController";
 
 const addressRoutes = Router();
 
 let createAddressController = new CreateAddressController();
-let listAdressesController = new ListAdressesController();
+let listAddressesController = new ListAddressesController();
 
 addressRoutes.post("/", createAddressController.handle);
 
-addressRoutes.get("/", listAdressesController.handle);
+addressRoutes.get("/", listAddressesController.handle);
 
 export { addressRoutes };
